Fixed collapse animation and change download links

Thanks to Uziskull on Discord for the image box sizing fix.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -42,6 +42,8 @@ div.body {
 }
 
 .rain-icon {
+  min-width: 100px;
+  min-height: 100px;
   max-width: 100px;
   max-height: 100px;
 }
